# medeval

./: .gitignore  DEPLOYMENT.md  ENHANCED_TEST_OVERLAP_AND_RESPONSE_FIXES.md  FUNDAMENTAL_PROGRESSIVE_REASONING_REFACTOR.md  LICENSE  MANIFEST.in  PROGRESSIVE_PROMPTS_FIX_SUMMARY.md  README.md  STAGE3_REASONING_AND_MAPPING_FIXES.md  TUBERCULOSIS_PNEUMONIA_MAPPING_FIX.md  clean_progressive_reasoning.py  demo_single_step_reasoning.py  pyproject.toml  requirements.txt  setup.py  test_bug_fixes.py  test_clean_progressive_from_scratch.py  test_enhanced_category_selection.py  test_fundamental_progressive_refactor.py  test_iterative.py  test_llm_test_overlap_and_response_fixing.py  test_models.py  test_performance_check.py  test_progressive_fix_verification.py  test_progressive_prompts_saving.py  test_progressive_reasoning.py  test_progressive_reasoning_category_fix.py  test_progressive_reasoning_fix.py  test_progressive_reasoning_fixes.py  test_real_progressive_refactor.py  test_single_step_reasoning.py  test_stage3_reasoning_fix.py  test_test_overlap_metrics.py  test_token_limits.py  test_truncation_fix.py  test_tuberculosis_pneumonia_fix.py  test_variable_scope_fix.py
medeval/: __init__.py  cli.py  evaluator.py  models.py  utils.py
