[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medeval"
version = "0.1.0"
description = "LLM Diagnostic Reasoning Evaluator for MIMIC-IV-Ext-DiReCT dataset"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mohammad Asadi"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "scikit-learn>=1.3.0,<1.6.0",
    "pandas>=2.0.0,<2.3.0",
    "numpy>=1.24.0,<2.0.0"
]

[project.scripts]
medeval = "medeval.cli:main"
medeval-demo = "medeval.cli:demo_main"
medeval-show = "medeval.cli:show_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medeval*"] 